@@ -1,3 +1,7 @@
+2001-09-26  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/x86/pentium4/sse2/gmp-mparam.h: New file.
+
 2001-09-26  Kevin Ryde  <kevin@swox.se>
 
 	* mpn/x86/pentium4/sse2/dive_1.asm: New file.
